<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/navigation_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="0.0px" >

        <LinearLayout
            android:id="@+id/left_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register"
            android:layout_alignParentLeft="true"
            android:gravity="left|center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/day_recommend_help_font_space" >

            <ImageView
                android:id="@+id/nav_left_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:src="@drawable/ic_action_previous_item" />
        </LinearLayout>

        <TextView
            android:id="@+id/nav_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/problem"
            android:textColor="@color/font_dark"
            android:textSize="18sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/blank_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/problem_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/problem_3"
                android:textColor="@color/font_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/problem_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/problem_password_text_1"
                android:textColor="@color/font_dark"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/voice_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/voice_described"
                android:textColor="@color/font_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voice_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/voice_described_text"
                android:textColor="@color/font_dark"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/other_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/other_description"
                android:textColor="@color/font_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/other_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/problem_password_text_2"
                android:textColor="@color/font_dark"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/voice_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@color/translucent_background"
            android:padding="20dp"
            android:text="正在录音..."
            android:textColor="@color/white_bg"
            android:textSize="20sp"
            android:visibility="invisible" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.75" >

        <ImageButton
            android:id="@+id/input_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/input_voice_tip"
            android:layout_centerHorizontal="true"
            android:background="@color/system_main_bg"
            android:src="@drawable/voice_input" />

        <TextView
            android:id="@id/input_voice_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="按住说话" />
    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="250dp"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button_green_light"
        android:text="@string/problem_password_text_3"
        android:textColor="@color/font_white"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>