<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/navigation_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="0.0px" >

        <LinearLayout
            android:id="@+id/left_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register"
            android:layout_alignParentLeft="true"
            android:gravity="left|center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/day_recommend_help_font_space" >

            <ImageView
                android:id="@+id/nav_left_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:src="@drawable/ic_action_previous_item" />
        </LinearLayout>

        <TextView
            android:id="@+id/nav_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/daxiang_vip"
            android:textColor="@color/font_dark"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/vip_image"
            android:layout_width="wrap_content"
            android:layout_height="330dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/un_vip_img" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/vip_image"
            android:layout_marginBottom="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vip_phone"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textColor="@color/white_bg"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vip_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/unvip_tip"
                android:textColor="@color/white_bg"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/open_vip"
        android:layout_width="260dp"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button_green_light"
        android:text="@string/open_vip"
        android:textColor="@color/font_white"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>